--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,14 @@ Package: spathial
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
-Author: Erika Gardini
+Author: Erika Gardini, Federico M. Giorgi, Sergio Decherchi
 Maintainer: Erika Gardini <erika.gardini4@unibo.it>
-Description: R (>= 3.0.1)
-License: MIT
+Description: spathial is an algorithm to calculate and define principal paths
+  in data space.
+License: LGPL-3
 Encoding: UTF-8
-LazyData: true
+LazyData: TRUE
 RoxygenNote: 6.1.1
+Depends: R (>= 3.5), pdist
+NeedsCompilation: no
+
