--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,6 @@ License: LGPL-3
 Encoding: UTF-8
 LazyData: TRUE
 RoxygenNote: 6.1.1
-Depends: R (>= 3.5), pdist
+Depends: R (>= 3.5), pdist, igraph
 NeedsCompilation: no
 
