--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(fisherp)
 export(kmgformat)
 export(p2corr)
 export(p2z)
+export(rkm_prefilter)
 export(slice)
 export(spathial)
 export(spathial_2D)
