Converted rkm up to matrix multiplication (excluded)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(initMedoids)
 export(kmgformat)
 export(p2corr)
 export(p2z)
+export(rkm)
 export(rkm_prefilter)
 export(slice)
 export(spathial)
