--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,6 @@ export(rkm)
 export(rkm_MS_pathvar)
 export(rkm_prefilter)
 export(spathialWay)
-export(spathial_2D)
+export(spathial_2D_plot)
 export(spathial_boundary_ids)
 export(spathial_labels)
