path_labels and correlation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,5 @@ export(rkm_prefilter)
 export(spathialWay)
 export(spathial_2D_plot)
 export(spathial_boundary_ids)
+export(spathial_corr)
 export(spathial_labels)
