--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,6 @@ License: LGPL-3
 Encoding: UTF-8
 LazyData: TRUE
 RoxygenNote: 6.1.1
-Depends: R (>= 3.5), igraph, pracma, MASS
+Depends: R (>= 3.5), igraph, pracma, MASS, matrixStats, Rtsne
 NeedsCompilation: no
 
