--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,13 @@ License: LGPL-3
 Encoding: UTF-8
 LazyData: TRUE
 RoxygenNote: 6.1.1
-Depends: R (>= 3.5), igraph, pracma, MASS, matrixStats, Rtsne
+Depends: R (>= 3.5)
 NeedsCompilation: no
-
+Imports: 
+    pracma,
+    igraph,
+    matrixStats,
+    MASS,
+    Rtsne
+Suggests:
+    reticulate
