--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,18 @@
 Package: spathial
 Type: Package
-Title: Spathial: an algorithm to find paths in data space
-Version: 0.1.1
-Authors@R: person("Erika", "Gardini", email = "erika.gardini4@unibo.it",
-  role = c("aut", "cre"))
-  person("Federico M.", "Giorgi", email = "federico.giorgi@unibo.it",
-  role = c("aut", "cre"))
-  person("Sergio", "Decherchi", email = "sergio.decherchi@iit.it",
-  role = c("aut", "cre"))
+Title: Evolutionary Analysis
+Version: 0.1.2
+Authors@R: c(person("Erika", "Gardini", email = "erika.gardini4@unibo.it", role = c("aut", "cre")),
+  person("Federico M.", "Giorgi", email = "federico.giorgi@unibo.it", role = c("aut")),
+  person("Sergio", "Decherchi", email = "sergio.decherchi@iit.it", role = c("aut")),
+  person("Andrea", "Cavalli", email = "andrea.cavalli@iit.it", role = c("aut")))
+Author: Erika Gardini [aut, cre], 
+  Federico M. Giorgi [aut], 
+  Sergio Decherchi [aut],
+  Andrea Cavalli [aut]
 Maintainer: Erika Gardini <erika.gardini4@unibo.it>
-Description: spathial is an algorithm to calculate and define principal paths
-  in data space.
-License: file LICENSE
+Description: A generic tool for manifold analysis. It allows to infer a relevant transition or evolutionary path which can highlights the features involved in a specific process. 'spathial' can be useful in all the scenarios where the temporal (or pseudo-temporal) evolution is the main problem (e.g. tumor progression). The algorithm for finding the principal path is described in: Ferrarotti et al., (2019) <doi:10.1109/TNNLS.2018.2884792>."
+License: GPL-3
 Encoding: UTF-8
 LazyData: TRUE
 RoxygenNote: 7.0.2
